--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>মাদ্রাসা ম্যানেজমেন্ট সিস্টেম</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+    <!-- PWA Configurations -->
+<link rel="manifest" href="manifest.json">
+<link rel="icon" href="https://i.ibb.co.com/hhVX9hp/android-chrome-192x192.png">
+<meta name="theme-color" content="#667eea">
     
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
@@ -1438,4 +1443,5 @@
         });
     </script>
 </body>
+
 </html>
